[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://src/screens/level-complete/LevelComplete.gd" type="Script" id=2]
[ext_resource path="res://assets/star.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Buttons:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Stars/Star1:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 0.01, 0.01 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Stars/Star2:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.1, 0.1 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/Stars/Star3:rect_scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.1, 0.1 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/Buttons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/Stars/Star1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/Stars/Star2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VBoxContainer/Stars/Star3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Buttons:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Stars/Star1:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Stars/Star2:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.1, 0.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/Stars/Star3:rect_scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Buttons:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Stars/Star1:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Stars/Star2:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/Stars/Star3:rect_scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/Buttons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/Stars/Star1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/Stars/Star2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VBoxContainer/Stars/Star3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="LevelComplete" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = -559.0
margin_right = 237.5
margin_bottom = 559.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level" type="Label" parent="VBoxContainer"]
margin_right = 475.0
margin_bottom = 118.0
text = "12"
align = 1

[node name="Stars" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 475.0
margin_bottom = 242.0
alignment = 1

[node name="Star1" type="TextureRect" parent="VBoxContainer/Stars"]
self_modulate = Color( 0.988235, 0.898039, 0.152941, 1 )
margin_left = 83.0
margin_right = 183.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star2" type="TextureRect" parent="VBoxContainer/Stars"]
self_modulate = Color( 0.984314, 0.956863, 0.745098, 1 )
margin_left = 187.0
margin_right = 287.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star3" type="TextureRect" parent="VBoxContainer/Stars"]
self_modulate = Color( 0.984314, 0.956863, 0.745098, 1 )
margin_left = 291.0
margin_right = 391.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 266.0
margin_right = 475.0
margin_bottom = 684.0
rect_pivot_offset = Vector2( 194, 215 )
custom_constants/separation = 20

[node name="NextLevel" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 475.0
margin_bottom = 126.0
text = "NEXT"

[node name="Replay" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 146.0
margin_right = 475.0
margin_bottom = 272.0
text = "REPLAY"

[node name="Levels" type="Button" parent="VBoxContainer/Buttons"]
visible = false
margin_top = 292.0
margin_right = 388.0
margin_bottom = 418.0
text = "LEVELS"

[node name="Help" type="Button" parent="VBoxContainer/Buttons"]
visible = false
margin_top = 292.0
margin_right = 475.0
margin_bottom = 418.0
text = "HELP"

[node name="Menu" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 292.0
margin_right = 475.0
margin_bottom = 418.0
text = "MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_LevelComplete_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Buttons/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Menu" to="." method="_on_Menu_pressed"]
